--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="nav-wrapper">
             <div class="top-nav">
                 <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><rect x="48" y="96" width="416" height="320" rx="56" ry="56" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="60" d="M48 192h416M128 300h48v20h-48z"/></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" onclick="openMenu()" viewBox="0 -960 960 960"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
             </div>
             <div class="middle-nav">
-                <div class="middle-nav-column1">
+                <div class="middle-nav-column">
                     <p class="link-heading">Atlas</p>
                     <ul>
                         <li><a href="">Dining</a></li>
@@ -26,14 +26,14 @@
                         <li><a href="">Concierge</a></li>
                     </ul>
                 </div>
-                <div class="middle-nav-column2">
+                <div class="middle-nav-column">
                     <p class="link-heading">Benefits</p>
                     <ul>
                         <li><a href="">Atlas Benefits</a></li>
                         <li><a href="">Visa Infinite</a></li>
                     </ul>
                 </div>
-                <div class="middle-nav-column3">
+                <div class="middle-nav-column">
                     <p class="link-heading">Contact</p>
                     <ul>
                         <li><a href="">Email</a></li>
@@ -52,5 +52,6 @@
             This is your friend who scores the hottest tables in town, your passport to weekend getaways, and your guest pass to must-see events. All brilliantly brought together in a card and app of uncompromising beauty and utility. This is the beginning of a journey to a world with no limits.<br><span>This is Atlas</span>
         </p>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
