Added features section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
             This is your friend who scores the hottest tables in town, your passport to weekend getaways, and your guest pass to must-see events. All brilliantly brought together in a card and app of uncompromising beauty and utility. This is the beginning of a journey to a world with no limits.<br><span>This is Atlas</span>
         </p>
     </section>
+    <section class="features-section">
+        <h2>Taste Maker</h2>
+        <p class="meet-atlas">
+            <span>Meet Atlas Supper Club.</span><br>
+            Skip past the endless waitlists and concierge calls that turn up empty handed. 
+            With Atlas, you have a seat at the table at today's most desirable restaurants.
+        </p>
+        <div class="phone-mockup">
+            <img src="iPhone-Mockup-14-Pro-6-1440x1080-removebg-preview.png" alt="">
+        </div>
+        <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
+        <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
+        <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
