Added grid and scroll animation. Yaay, I finally figure out css grid

--- a/index.html
+++ b/index.html
@@ -64,8 +64,16 @@
         </div>
         <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
         <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
-        <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
+        <div class="features features-last"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
+
+
+        <div class="images-grid-1">
+            <div><img src="horses-desktop.jpg" alt=""></div>
+            <div><img src="cucina-desktop.jpg" alt=""></div>
+            <div><img src="felix-desktop.jpg" alt=""></div>
+        </div>
     </section>
+
     <script src="script.js"></script>
 </body>
 </html>
