New images folder

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
     <section class="hero-section">
         <h1 class="hero-text">No Limits</h1>
-        <img src="BCA-AMEX-contactless.png" alt="" class="hero-img">
+        <img src="images/BCA-AMEX-contactless.png" alt="" class="hero-img">
         <p>
             This is your friend who scores the hottest tables in town, your passport to weekend getaways, and your guest pass to must-see events. All brilliantly brought together in a card and app of uncompromising beauty and utility. This is the beginning of a journey to a world with no limits.<br><span>This is Atlas</span>
         </p>
@@ -60,7 +60,7 @@
             With Atlas, you have a seat at the table at today's most desirable restaurants.
         </p>
         <div class="phone-mockup">
-            <img src="iPhone-Mockup-14-Pro-6-1440x1080-removebg-preview.png" alt="">
+            <img src="images/iPhone-Mockup-14-Pro-6-1440x1080-removebg-preview.png" alt="">
         </div>
         <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
         <div class="features"><p>Dedicated reservations</p><p>Access exclusive inventory at our restaurant partners including Horses, Felix Trattoria, Cucina Alba, and more.</p></div>
@@ -68,9 +68,9 @@
 
 
         <div class="images-grid-1">
-            <div><img src="horses-desktop.jpg" alt=""></div>
-            <div><img src="cucina-desktop.jpg" alt=""></div>
-            <div><img src="felix-desktop.jpg" alt=""></div>
+            <div><img src="images/horses-desktop.jpg" alt=""></div>
+            <div><img src="images/cucina-desktop.jpg" alt=""></div>
+            <div><img src="images/felix-desktop.jpg" alt=""></div>
         </div>
     </section>
 
