Remade the nav bar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="last-nav"></div>
+            <!-- <div class="last-nav"></div> -->
         </div>
     </nav>
     <section class="hero-section">
