--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
         </div>
     </section>
 
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.29/bundled/lenis.min.js">
+        const lenis = new Lenis()
+
+        lenis.on('scroll', (e) => {
+        console.log(e)
+        })
+
+        function raf(time) {
+        lenis.raf(time)
+        requestAnimationFrame(raf)
+        }
+
+        requestAnimationFrame(raf)
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
