--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="last-nav"></div> -->
         </div>
     </nav>
     <section class="hero-section">
@@ -74,20 +73,11 @@
         </div>
     </section>
 
-    <script src="https://unpkg.com/@studio-freight/lenis@1.0.29/bundled/lenis.min.js">
-        const lenis = new Lenis()
-
-        lenis.on('scroll', (e) => {
-        console.log(e)
-        })
-
-        function raf(time) {
-        lenis.raf(time)
-        requestAnimationFrame(raf)
-        }
-
-        requestAnimationFrame(raf)
-    </script>
+    <section class="clip-image">
+        <div>
+            <img src="images\adrien-olichon-HsKS2zVMF1I-unsplash.jpg" alt="">
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
